# QuackTheCode_executor

./: .gitignore  CMakeLists.txt  cloud_install.sh  config_gen.py  config_options.txt  interface.md
config/: config.json  hello.py  sandbox.cfg
example/: example.js
include/: config.hpp  descriptors.hpp  execution_emulated_pool.hpp  execution_pool.hpp  execution_server.hpp  execution_thread_pool.hpp  executor.hpp  socket_server.hpp  tcp_socket_server.hpp  thread_pool.hpp  unix_socket_server.hpp
src/: config.cpp  descriptors.cpp  execution_emulated_pool.cpp  execution_server.cpp  execution_thread_pool.cpp  executor.cpp  main.cpp  socket_server.cpp  tcp_socket_server.cpp  thread_pool.cpp  unix_socket_server.cpp
testing/: test_exec.js  test_limit.js  test_timing.js  test_unix_socket.js
